# cmsPdmV

./: .gitignore  README.md  main.py  prep2.e4p  start_prep2.sh  wsgi.py
ACMW/: main.py  (+4 more)
mcm/tests/: README.md  api_tools.py  base_test_tools.py  pyproject.toml  requirements.txt  test_api_tools.py
mcm/tests/campaign/: test_campaign.py
mcm/tests/mcm_tests/: base_test_tools.py  fixtures.py  test_api_tools.py
mcm/tests/mcm_tests/campaign/: test_campaign.py
mcm/tests/mcm_tests/rest_api/: api_tools.py  base_test_tools.py  test_api_tools.py  test_campaign.py  test_chained_campaign.py  test_chained_request.py  test_flows.py  test_invalidations.py  test_lists.py  test_mccm.py  test_requests.py  test_settings.py  test_tags.py  test_users.py
mcm/tests/mcm_tests/rest_api/campaign/: test_campaign.py
mcm/tests/mcm_tests/rest_api/campaign/static/: campaign.json
mcm/tests/mcm_tests/use_cases/full_injection/: core.py  test_full_injection.py
mcm/tests/mcm_tests/use_cases/full_injection/static/: dr_campaign.json  flow_to_dr.json  mccm_ticket.json
mcm/tests/mcm_tests/use_cases/full_injection/static/RunII/: digi_campaign.json  flow_to_digi.json  flow_to_hlt.json  flow_to_miniaod.json  flow_to_nanoaod.json  flow_to_reco.json  flow_to_sim.json  hlt_campaign.json  miniaod_campaign.json  nanoaod_campaign.json  reco_campaign.json  root_campaign.json  root_request.json  sim_campaign.json
mcm/tests/mcm_tests/use_cases/full_injection/static/RunIII/: flow_to_miniaod.json  flow_to_nanoaod.json  gs_root_campaign.json  miniaod_campaign.json  nanoaod_campaign.json  root_request.json
(+504 files in other folders)
